# RustySwift

./: LICENSE  README.md
rust/: .gitignore  Cargo.toml
rust/ffi/: Cargo.toml
rust/ffi/src/: lib.rs
rust/weather/: Cargo.toml
rust/weather/src/: lib.rs
swift/: .gitignore
swift/Rust Bits/: librustyswift-Bridging-Header.h  librustyswift.h
swift/RustySwift/: AppDelegate.swift  JSONTypes.swift  RustySwift.swift  ViewController.swift
swift/RustySwift.xcodeproj/: project.pbxproj
swift/RustySwift.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
