[package]
name = "weather"
version = "0.1.0"
authors = ["Anthony Lobianco <anthony@lobian.co>"]
edition = "2018"

[dependencies]
hyper =  "0.13.0-alpha.4"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
serde = { version = "1.0.98", default-features = false }
serde_derive = { version = "1.0.92", default-features = false }
serde_json = { version = "1.0.39", default-features = false }